[package]
name = "sophya_world_test"
version = "0.2.0"
edition = "2018"
authors = ["Constantine F. <zenflak@gmail.com>", ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
clap = "2.33.3"